# Levee

./: .gitignore  .prettierignore  CLA.md  CONTRIBUTING.md  LICENSING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.githooks/: pre-commit
scripts/: prepare-binaries.js
src/: App.tsx  accent.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  dcomp.rs  file_commands.rs  lib.rs  main.rs  media_format.rs  media_probe.rs  mpv.rs  process_tools.rs  proxy_commands.rs  proxy_paths.rs  suite_commands.rs  thumbnail_commands.rs
src/api/: events.ts  tauri.ts  window.ts
src/components/: DefaultPlayerPrompt.tsx  Dropdown.tsx  Splash.tsx  icons.tsx
src/components/MetadataPanel/: index.tsx
src/components/Player/: ChevronNav.tsx  Controls.tsx  TopBar.tsx  VideoElement.tsx  index.tsx
src/contexts/: ProxyContext.tsx  SettingsContext.tsx  SuiteContext.tsx
src/domain/: media.test.ts  media.ts  path.test.ts  path.ts  player.ts
src/hooks/: useAutoHide.ts  useKeyboardShortcuts.ts  useMpvPlayer.ts  useVideoPlayer.ts
src/types/: index.test.ts  index.ts
