[package]
name = "levee"
version = "0.1.0"
description = "Levee — proxy player and Suite pre-cache manager"
authors = []
edition = "2021"

[package.metadata]

[lib]
name = "levee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
# Matches the windows-rs version Tauri 2.11 pulls in, so cargo unifies to one copy.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
